--- a/june.html
+++ b/june.html
@@ -8,6 +8,7 @@
    <title>Document</title>
    <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="/css/indexCSS/Testimonial.css">
+   <link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -15,11 +16,16 @@
       <div class="testimonial-container">
          <label class="tag-name">Testimonial</label>
          <h2>What Parents Says About Us</h2>
-         <div class="testimonial-carousel">
-            <div class="testimonial-item">
-               <p class="testament">Far far away, behind the word mountains, far from the countries Vokalia and
-                  Consonantia, there live the blind texts.
-                  Far far away, behind the word mountains, far from the </p>
+
+         <div class="testimonial-carousel mySwiper">
+
+               <div class="swiper-wrapper">
+
+                  <div class="swiper-slide">
+                     <div class="testimonial-item ">
+                        <p class="testament">Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia, there live the blind texts.
+                           Far far away, behind the word mountains, far from the </p>
                <div class="user-des">
                   <div class="profile">
                      <img src="/assets/image 6.png" alt="">
@@ -27,12 +33,100 @@
                   <h4>ROGER SCOTT</h4>
                   <p class="date">2022</p>
                </div>
-            </div>
+                     </div>
+                  </div>
+
+                  
+                  <div class="swiper-slide">
+                     <div class="testimonial-item ">
+                        <p class="testament">Far far away, behind the word mountains, far from the countries Vokalia and
+                        Consonantia, there live the blind texts.
+                           Far far away, behind the word mountains, far from the </p>
+               <div class="user-des">
+                  <div class="profile">
+                     <img src="/assets/image 6.png" alt="">
+                  </div>
+                  <h4>ROGER SCOTT</h4>
+                  <p class="date">2022</p>
+               </div>
+                     </div>
+                  </div>
+
+               </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
          </div>
-            <button class="next-btn main-btn"><i class="fa-solid fa-chevron-right"></i></button>
-            <button class="nex-btn main-btn"><i class="fa-solid fa-chevron-right"></i></button>
+
       </div>
+
    </section>
+
+   <footer>
+      <div class="footer-container">
+            <nav class="questions">
+               <h3>Have a Questions?</h3>
+               <ul class="questions-nav link-nav ">
+                  <li><a href="#">203 Fake St. Mountain View, <br> San Francisco, California, USA</a></li>
+                  <li><a href="#"><a href="">+2 392 3929 210</a></li>
+                  <li><a href="#">abcd@gmail.com</a></li>
+               </ul>
+            </nav>
+
+            <div class="instagram">
+               <h3>Instagram</h3>
+               <div class="cont-img">
+                  <div class="img-grid">
+                     <img class="img1" src="/assets/istockphoto-950605046-612x612.jpg" alt="">
+                     <img class="img2" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                     <img class="img3" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                     <img class="img4" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                     <img class="img5" src="/assets/promote-positive-body-image-kids-839295596.jpg" alt="">
+                  </div>
+               </div>
+            </div>
+
+            <nav class="links">
+               <h3>Links</h3>
+               <ul class="link-nav links-quick ">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">My Course<a Coursea href=""></a></li>
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Account</a></li>
+               </ul>
+            </nav>
+
+            <div class="social-email">
+               <div class="subscribe">
+                  <h3>Subscribe Us!</h3>
+                  <div>
+                     <form action="#">
+                        <input type="text" placeholder="Enter email address" required>
+                        <div>
+                           <button>Subscribe</button>
+                        </div>
+                     </form>
+                  </div>
+               </div>
+               <div class="connect">
+                  <h3>Connect With Us</h3>
+                  <div>
+                     <ul class="link-nav links-quick socail ">
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+
+      </div>
+   </footer>
+
+   <script src="/swiper/swiper-bundle.min.js"></script>
+   <script src="/js/index.js"></script>
 </body>
 
 </html>
