--- a/tita.html
+++ b/tita.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="/css/indexCSS/LEARN ANYTHING.css ANYTHING.css">
+    <link rel="stylesheet" href="/css/indexCSS/LEARN ANYTHING.css">
     <title>Document</title>
 </head>
 <body>
