--- a/XITO.html
+++ b/XITO.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <!-- Background vectors, nag export nalang po ako ng img ksi hindi ko po alam kung paano ilagay sila ilagay hahaha. -->
+            <!-- Background vectors, nag export nalang po ako ng img ksi hindi ko po alam kung paano sila ilagay hahaha. -->
             <div class="vectors">
                 <img src="img/vectors/vector.png" alt="" id="vec">
                 <img src="img/vectors/vector-1.png" alt="" id="vec1">
@@ -44,6 +44,11 @@
                                 <a href="#" class="navLink">Account</a>
                             </li>
                         </ul>
+                        <div class="hamburger">
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                            <span class="bar"></span>
+                        </div>
                     </div>
                 </nav>
 
@@ -61,5 +66,7 @@
             </div>
         </header>
     </div>
+
+    <script src="js/XITO.js"></script>
 </body>
 </html>
