Fixed nav bg color, and vectors

--- a/XITO.html
+++ b/XITO.html
@@ -18,8 +18,8 @@
                 <img src="img/vectors/vector-2.png" alt="" id="vec2">
             </div>
 
-            <div class="wrapper">
-                <nav>
+            <nav>
+                <div class="wrapper">
                     <div class="logo">
                         <a href="home.html"><img src="#" alt="logo" id="logo"></a>
                     </div>
@@ -50,8 +50,10 @@
                             <span class="bar"></span>
                         </div>
                     </div>
-                </nav>
+                </div>
+            </nav>
 
+            <div class="wrapper">
                 <div class="landingPage">
                     <div class="bannerText">
                         <h1><span id="text">Education</span> is the key to all the locked doors of the unknown.</h1>
