Fixed some issues with the responsiveness

--- a/XITO.html
+++ b/XITO.html
@@ -67,6 +67,29 @@
                 </div>
             </div>
         </header>
+
+        <aside>
+            <div class="info">
+                <div class="wrapper">
+                    <div class="students">
+                        <h1>2,500+</h1>
+                        <p>Students Enrolled</p>
+                    </div>
+                    <div class="graduates">
+                        <h1>351</h1>
+                        <p>Successful Kids</p>
+                    </div>
+                    <div class="approval">
+                        <h1>564</h1>
+                        <p>Happy Parents</p>
+                    </div>
+                    <div class="awards">
+                        <h1>300</h1>
+                        <p>Awards Won</p>
+                    </div>
+                </div>
+            </div>
+        </aside>
     </div>
 
     <script src="js/XITO.js"></script>
