--- a/june.html
+++ b/june.html
@@ -14,11 +14,66 @@
 </head>
 
 <body>
-   <section style="height: 200vh;">a</section>
+   <section>
+      <div class="prize-container">
+         <div class="pricing">
+            <h2>Our Pricing</h2>
+            <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+         </div>
 
+         <div class="package">
+            <div class="package-box">
+               <div>
+                  <h3>BASIC PACKAGE</h3>
+                  <p>$127</p>
+               </div>
+               <ul>
+                  <li>Just under 40 hours of content across 150 videos</li>
+                  <li>Six large bonus projects</li>
+                  <li>Download all videos for offline access</li>
+                  <li>Exclusive access to private Discord community</li>
+               </ul>
+               <div class="btn"><button>Buy Now</button></div>
+            </div>
+            <div class="package-box">
+               <div>
+                  <h3>COMPLETE PACKAGE</h3>
+                  <p>$127</p>
+               </div>
+               <ul>
+                  <li>Everything in the Complete Package</li>
+                  <li>Just under 40 hours of content across 150 videos</li>
+                  <li>Six large bonus projects</li>
+                  <li>Download all videos for offline access</li>
+                  <li>Exclusive access to private Discord community</li>
+                  <li>Lifetime access</li>
+               </ul>
+               <div class="btn"><button>Buy Now</button></div>
+            </div>
+            <div class="package-box box-center">
+               <div>
+                  <h3>PREMIUM PACKAGE</h3>
+                  <p>$127</p>
+               </div>
+               <ul>
+                  <li>Just under 40 hours of content across 150 videos</li>
+                  <li>Six large bonus projects</li>
+                  <li>Download all videos for offline access</li>
+                  <li>Exclusive access to private Discord community</li>
+                  <li>All future updates</li>
+                  <li>Lifetime access</li>
+               </ul>
+               <div class="btn"><button>Buy Now</button></div>
+            </div>
+         </div>
+      </div>
+   </section>
+
+   <br>
+   <br>
 
    <footer >
-      <div class="footer-container ">
+      <div class="footer-container  ">
             <nav class="questions"  data-aos="fade-down-right">
                <h3>Have a Questions?</h3>
                <ul class="questions-nav link-nav ">
