--- a/june.html
+++ b/june.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <script src="https://kit.fontawesome.com/21f9873db8.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="/css/indexCSS/Testimonial.css">
+   <link rel="stylesheet" href="/css/indexCSS/Our Pricing.css">
    <link rel="stylesheet" href="/swiper/swiper-bundle.min.css">
 
    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
