--- a/june.html
+++ b/june.html
@@ -33,7 +33,7 @@
                   <li>Download all videos for offline access</li>
                   <li>Exclusive access to private Discord community</li>
                </ul>
-               <div class="btn"><button>Buy Now</button></div>
+               <div class="btn"><button class="basic">Buy Now</button></div>
             </div>
             <div class="package-box">
                <div>
@@ -48,7 +48,7 @@
                   <li>Exclusive access to private Discord community</li>
                   <li>Lifetime access</li>
                </ul>
-               <div class="btn"><button>Buy Now</button></div>
+               <div class="btn"><button class="basic">Buy Now</button></div>
             </div>
             <div class="package-box box-center">
                <div>
@@ -63,7 +63,7 @@
                   <li>All future updates</li>
                   <li>Lifetime access</li>
                </ul>
-               <div class="btn"><button>Buy Now</button></div>
+               <div class="btn"><button >Buy Now</button></div>
             </div>
          </div>
       </div>
