--- a/tita.html
+++ b/tita.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="learnAnything">
+<section class="learnAnything-container">
+    <div id="learnAnything">
         <div id="learnAnythingImage">
             <img src="/img/learnAnything.png" alt="A boy carrying 5 books">
         </div>
@@ -63,6 +64,7 @@
                 </div>
             </div>
         </article>
-    </section>
+    </div>
+</section>
 </body>
 </html>
