--- a/XITO.html
+++ b/XITO.html
@@ -68,7 +68,7 @@
             </div>
         </header>
 
-        <aside>
+        <section>
             <div class="info">
                 <div class="wrapper">
                     <div class="students">
@@ -89,7 +89,11 @@
                     </div>
                 </div>
             </div>
-        </aside>
+
+            <div class="wrapper">
+                
+            </div>
+        </section>
     </div>
 
     <script src="js/XITO.js"></script>
