Added what we offer

--- a/XITO.html
+++ b/XITO.html
@@ -68,7 +68,7 @@
             </div>
         </header>
 
-        <section>
+        <section class="info_offers">
             <div class="info">
                 <div class="wrapper">
                     <div class="students">
@@ -91,7 +91,45 @@
             </div>
 
             <div class="wrapper">
-                
+                <div class="courses">
+                    <p>COURSE</p>
+                    <h2>What We Offer</h2>
+
+                    <div class="offers">
+                        <div class="card">
+                            <img src="img/course/english.png" alt="">
+                            <h3>English</h3>
+                            <h4>12 Lessons</h4>
+                            <h5>3 Projects</h5>
+                            <button>Free</button>
+                        </div>
+                        <div class="card">
+                            <img src="img/course/math.png" alt="">
+                            <h3>Math</h3>
+                            <h4>12 Lessons</h4>
+                            <h5>3 Projects</h5>
+                            <button>Free</button>
+                        </div>
+                        <div class="card">
+                            <img src="img/course/science.png" alt="">
+                            <h3>Science</h3>
+                            <h4>12 Lessons</h4>
+                            <h5>3 Projects</h5>
+                            <button>Free</button>
+                        </div>
+                        <div class="card">
+                            <img src="img/course/geography.png" alt="">
+                            <h3>Geography</h3>
+                            <h4>12 Lessons</h4>
+                            <h5>3 Projects</h5>
+                            <button>Free</button>
+                        </div>
+                    </div>
+
+                    <a href="#" class="see_more">
+                        <button>See More</button>
+                    </a>
+                </div>
             </div>
         </section>
     </div>
