--- a/june.html
+++ b/june.html
@@ -14,15 +14,16 @@
 </head>
 
 <body>
+   <section style="height: 100vh;"></section>
    <section>
       <div class="prize-container">
-         <div class="pricing">
+         <div class="pricing" data-aos="zoom-in">
             <h2>Our Pricing</h2>
             <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
          </div>
 
-         <div class="package">
-            <div class="package-box">
+         <div class="package" >
+            <div class="package-box" data-aos="fade-right">
                <div>
                   <h3>BASIC PACKAGE</h3>
                   <p>$127</p>
@@ -35,7 +36,7 @@
                </ul>
                <div class="btn"><button class="basic">Buy Now</button></div>
             </div>
-            <div class="package-box">
+            <div class="package-box" data-aos="fade-left">
                <div>
                   <h3>COMPLETE PACKAGE</h3>
                   <p>$127</p>
@@ -50,7 +51,7 @@
                </ul>
                <div class="btn"><button class="basic">Buy Now</button></div>
             </div>
-            <div class="package-box box-center">
+            <div class="package-box box-center" data-aos="fade-up">
                <div>
                   <h3>PREMIUM PACKAGE</h3>
                   <p>$127</p>
