--- a/XITO.html
+++ b/XITO.html
@@ -122,7 +122,7 @@
                             <h3>Geography</h3>
                             <h4>12 Lessons</h4>
                             <h5>3 Projects</h5>
-                            <button>Free</button>
+                            <button>$20.00</button>
                         </div>
                     </div>
 
