fixed some issues

--- a/XITO.html
+++ b/XITO.html
@@ -99,30 +99,30 @@
                         <div class="card">
                             <img src="img/course/english.png" alt="">
                             <h3>English</h3>
-                            <h4>12 Lessons</h4>
-                            <h5>3 Projects</h5>
-                            <button>Free</button>
+                            <h5>12 Lessons</h5>
+                            <h6>3 Projects</h6>
+                            <button><p>Free</p></button>
                         </div>
                         <div class="card">
                             <img src="img/course/math.png" alt="">
                             <h3>Math</h3>
-                            <h4>12 Lessons</h4>
-                            <h5>3 Projects</h5>
-                            <button>Free</button>
+                            <h5>12 Lessons</h5>
+                            <h6>3 Projects</h6>
+                            <button><p>Free</p></button>
                         </div>
                         <div class="card">
                             <img src="img/course/science.png" alt="">
                             <h3>Science</h3>
-                            <h4>12 Lessons</h4>
-                            <h5>3 Projects</h5>
-                            <button>Free</button>
+                            <h5>12 Lessons</h5>
+                            <h6>3 Projects</h6>
+                            <button><p>Free</p></button>
                         </div>
                         <div class="card">
                             <img src="img/course/geography.png" alt="">
                             <h3>Geography</h3>
-                            <h4>12 Lessons</h4>
-                            <h5>3 Projects</h5>
-                            <button>$20.00</button>
+                            <h5>12 Lessons</h5>
+                            <h6>3 Projects</h6>
+                            <button><p>$20.00</p></button>
                         </div>
                     </div>
 
