--- a/Nicolai.html
+++ b/Nicolai.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/indexCSS/BLOG POST & EVENTS.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
-    <br>
-    <br>
-    <br>
     <section class="blog-section">
         <div class="blog-container">
-            <div class="blog-head">
+            <div class="blog-head " data-aos="fade-down">
                 <label>BLOG POST & EVENTS</label>
                 <h2>DISCOVER NEWS AND ACTIVITIES IN OURSCHOOL</h2>
             </div>
             <div class="blog-flex">
-                <div class="blog-card">
+                <div class="blog-card" data-aos="zoom-in-down">
+                    <div class="bg-color-blog"></div>
                     <div class="imge-bg-blog">
                         <img src="/assets/blog1.png" alt="">
                     </div>
@@ -27,7 +27,8 @@
                         <p>Grabbing the consumer’s attention isn’t enough; you have to keep that attention for at least a few seconds. <a href="#">See More....</a></p>
                     </div>
                 </div>
-                <div class="blog-card">
+                <div class="blog-card"data-aos="zoom-in-down">
+                    <div class="bg-color-blog"></div>
                     <div class="imge-bg-blog">
                         <img src="/assets/blog1.png" alt="">
                     </div>
@@ -36,7 +37,8 @@
                         <p>Grabbing the consumer’s attention isn’t enough; you have to keep that attention for at least a few seconds. <a href="#">See More....</a></p>
                     </div>
                 </div>
-                <div class="blog-card">
+                <div class="blog-card" data-aos="zoom-in-down">
+                    <div class="bg-color-blog"></div>
                     <div class="imge-bg-blog">
                         <img src="/assets/blog1.png" alt="">
                     </div>
@@ -48,5 +50,15 @@
             </div>
         </div>
     </section>
+
+
+    <br>
+    <br>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
