--- a/contact/tita.html
+++ b/contact/tita.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/307dd57570.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/307dd57570.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/contactCSS/messageUs.css" />
     <title>Document</title>
   </head>
@@ -73,12 +70,7 @@
     <section class="contactHeader-container">
       <div id="contactHeader">
         <strong>Let's make something awesome together</strong>
-        <p>
-          You're not going to hit a ridiculously long phone menu when you call
-          us. Your email isn't going to the inbox abyss, never to be seen or
-          heard from again. At Choice Screening, we provide the exceptional
-          service we'd want to experience ourselves!
-        </p>
+        <p>You're not going to hit a ridiculously long phone menu when you call us. Your email isn't going to the inbox abyss, never to be seen or heard from again. At Choice Screening, we provide the exceptional service we'd want to experience ourselves!</p>
       </div>
     </section>
     <section class="getInTouch-container">
@@ -92,6 +84,18 @@
               </div>
               <span class="getInTouchIconName">Location</span>
             </div>
+            <div class="getInTouchData">
+              <h3>Weifield Group Contracting</h3>
+              <div class="info">
+                <p>6950 S. Jordan Road Centennial, CO 80112</p>
+              </div>
+            </div>
+            <div class="getInTouchData">
+              <h3>Weifield Group Contracting</h3>
+              <div class="info">
+                <p>6950 S. Jordan Road Centennial, CO 80112</p>
+              </div>
+            </div>
           </article>
           <article>
             <div class="getInTouchInfo">
@@ -99,6 +103,18 @@
                 <i class="fas fa-phone"></i>
               </div>
               <span class="getInTouchIconName">Number</span>
+            </div>
+            <div class="getInTouchData">
+              <h3>Weifield Group Contracting</h3>
+              <div class="info">
+                <p>877.WEIFIELD phone 303.202.0466 facsimile</p>
+              </div>
+            </div>
+            <div class="getInTouchData">
+              <h3>Weifield 24/7 Service Department</h3>
+              <div class="info">
+                <p id="dataWeird">877.WEIFIELD <br> (Then press 0 for emergency calls)</p>
+              </div>
             </div>
           </article>
           <article>
@@ -108,6 +124,18 @@
               </div>
               <span class="getInTouchIconName">Email</span>
             </div>
+            <div class="getInTouchData">
+              <h3>Request for Proposal</h3>
+              <div class="info">
+                <p>Info@weifieldgroup.com</p>
+              </div>
+            </div>
+            <div class="getInTouchData">
+              <h3>All Bid Opportunities</h3>
+              <div class="info">
+                <p>estimating@weifieldgroup.com</p>
+              </div>
+            </div>
           </article>
         </div>
       </div>
@@ -116,27 +144,16 @@
       <div id="messageUs">
         <div id="messageUsText">
           <h2>Message Us</h2>
-          <p>
-            If you wish to be considered for employment at Weifield, please do
-            not send a message, here – instead, please complete Weifield’s job
-            application and our Human Resources department will contact you
-            after their review of your submitted information.
-          </p>
+          <p>If you wish to be considered for employment at Weifield, please do not send a message, here – instead, please complete Weifield’s job application and our Human Resources department will contact you after their review of your submitted information.</p>
         </div>
         <form id="messageUsForm">
           <div id="messageUsName">
-            <label for="firstName"
-              >First Name <input type="text" id="firstName"
-            /></label>
-            <label for="lastName"
-              >Last Name <input type="text" id="lastName"
-            /></label>
+            <label for="firstName">First Name <input type="text" id="firstName" /></label>
+            <label for="lastName">Last Name <input type="text" id="lastName" /></label>
           </div>
-          <label for="phoneNumber"
-            >Phone Number <input type="number" id="phoneNumber"
-          /></label>
+          <label for="phoneNumber">Phone Number <input type="number" id="phoneNumber" /></label>
           <label for="email">Email <input type="email" id="email" /></label>
-          <textarea placeholder="What's your concern?"></textarea>
+          <label>What's your concern? <textarea></textarea></label>
           <button type="submit">Send</button>
         </form>
       </div>
