--- a/zack.html
+++ b/zack.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="/css/indexCSS/what We Offer & Student Enrolled.css">
 </head>
 <body>
-    <section>
+    <section class="course-section">
         <div class="course">
             <div class="headtop">
                 <label>COURSE</label>
                 <h2>What We Offers </h2>
             </div>
-            <div class="">
+            <div class="course-main">
                 <div class="box">
                     <div class="imge-box">
                         <img src="/assets/english.png" alt="">
@@ -23,6 +23,17 @@
                     <div class="description">
                         <h3>English</h3>
                         <p class="lesson">12 Lessons</p>
+                        <p class="projects">3 Projects</p>
+                        <div class="btn-course"><button>Free</button></div>
+                    </div>
+                </div>
+                <div class="box padding">
+                    <div class="imge-box ">
+                        <img src="/assets/english.png" alt="">
+                    </div>
+                    <div class="description">
+                        <h3>Mathematics</h3>
+                        <p class="lesson">10 Lessons</p>
                         <p class="projects">3 Projects</p>
                         <div class="btn-course"><button>Free</button></div>
                     </div>
@@ -36,6 +47,17 @@
                         <p class="lesson">10 Lessons</p>
                         <p class="projects">3 Projects</p>
                         <div class="btn-course"><button>Free</button></div>
+                    </div>
+                </div>
+                <div class="box order  padding" >
+                    <div class="imge-box">
+                        <img src="/assets/english.png" alt="">
+                    </div>
+                    <div class="description">
+                        <h3>Mathematics</h3>
+                        <p class="lesson">10 Lessons</p>
+                        <p class="projects">3 Projects</p>
+                        <div class="btn-course"><button>$230.0</button></div>
                     </div>
                 </div>
             </div>
