--- a/zack.html
+++ b/zack.html
@@ -18,7 +18,7 @@
             <div class="course-main">
                 <div class="box">
                     <div class="imge-box">
-                        <img src="/assets/english.png" alt="">
+                        <img src="/assets/English-language.jpg" alt="">
                     </div>
                     <div class="description">
                         <h3>English</h3>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="box padding">
                     <div class="imge-box ">
-                        <img src="/assets/english.png" alt="">
+                        <img src="/assets/Maths_1.jpg" alt="">
                     </div>
                     <div class="description">
                         <h3>Mathematics</h3>
@@ -40,10 +40,10 @@
                 </div>
                 <div class="box">
                     <div class="imge-box">
-                        <img src="/assets/english.png" alt="">
+                        <img src="/assets/myhc_78987.jpg" alt="">
                     </div>
                     <div class="description">
-                        <h3>Mathematics</h3>
+                        <h3>Science</h3>
                         <p class="lesson">10 Lessons</p>
                         <p class="projects">3 Projects</p>
                         <div class="btn-course"><button>Free</button></div>
@@ -51,10 +51,10 @@
                 </div>
                 <div class="box order  padding" >
                     <div class="imge-box">
-                        <img src="/assets/english.png" alt="">
+                        <img src="/assets/T-AD-008-Art-Title-Display-Lettering.jpg" alt="">
                     </div>
                     <div class="description">
-                        <h3>Mathematics</h3>
+                        <h3>Art</h3>
                         <p class="lesson">10 Lessons</p>
                         <p class="projects">3 Projects</p>
                         <div class="btn-course"><button>$230.0</button></div>
