--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -44,7 +44,8 @@
                             <img src="/assets/teacher1.png" alt="">
                         </div>
                         <div class="teachers-text">
-                            <h3>Jacob <br> Olenick</h3>
+                            <h3>Leopoldo <br>
+                                Pirela</h3>
                             <p>Hello, I’m a teacher, real man you alway see in your TV. Surprise, i’m also and a
                                 photography teacher.when an unknown printer took a galley of type and scrambled it to
                                 make a type specimen book.</p>
