--- a/aboutus/about.html
+++ b/aboutus/about.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-    <section style="height: 100vh;"></section>
+    <section class="about-banner">
+        <img src="/assets/aboutbg.png" alt="">
+        <div class="overlay">  <h1>About Us</h1></div>
+    </section>
+
+
     <section class="teachers-section">
         <div class="teachers-container">
             <div class="head-teachers">
