add classes for styling purposes

--- a/contact/tita.html
+++ b/contact/tita.html
@@ -77,7 +77,7 @@
       <div id="getInTouch">
         <h2>Get In Touch</h2>
         <div id="getInTouchFlex">
-          <article>
+          <article id="getInTouchArticleOne">
             <div class="getInTouchInfo">
               <div class="getInTouchIcon">
                 <i class="fas fa-location-dot"></i>
@@ -97,7 +97,7 @@
               </div>
             </div>
           </article>
-          <article>
+          <article id="getInTouchArticleTwo">
             <div class="getInTouchInfo">
               <div class="getInTouchIcon">
                 <i class="fas fa-phone"></i>
@@ -117,20 +117,20 @@
               </div>
             </div>
           </article>
-          <article>
+          <article id="getInTouchArticleThree">
             <div class="getInTouchInfo">
               <div class="getInTouchIcon">
                 <i class="fas fa-envelope"></i>
               </div>
               <span class="getInTouchIconName">Email</span>
             </div>
-            <div class="getInTouchData">
+            <div class="getInTouchData one">
               <h3>Request for Proposal</h3>
               <div class="info">
                 <p>Info@weifieldgroup.com</p>
               </div>
             </div>
-            <div class="getInTouchData">
+            <div class="getInTouchData two">
               <h3>All Bid Opportunities</h3>
               <div class="info">
                 <p>estimating@weifieldgroup.com</p>
