--- a/XITO.html
+++ b/XITO.html
@@ -9,7 +9,41 @@
     <link rel="stylesheet" href="css/indexCSS/Nav & Hero.css">
 </head>
 <body>
-    <div class="container">
+    <nav class="main-nav">
+        <div class="wrapper">
+            <div class="logo">
+                <a href="home.html"><img src="/assets/logo.svg" alt="logo" id="logo"></a>
+            </div>
+            <div class="menu">
+                <ul class="navMenu">
+                    <li class="navList">
+                        <a href="#" class="navLink">Home</a>
+                    </li>
+                    <li class="navList">
+                        <a href="#" class="navLink">My Course</a>
+                    </li>
+                    <li class="navList">
+                        <a href="#" class="navLink">Contact</a>
+                    </li>
+                    <li class="navList">
+                        <a href="#" class="navLink">Blog</a>
+                    </li>
+                    <li class="navList">
+                        <a href="#" class="navLink">About Us</a>
+                    </li>
+                    <li class="navList">
+                        <a href="#" class="navLink">Account</a>
+                    </li>
+                </ul>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <section class="container">
         <header>
             <!-- Background vectors, nag export nalang po ako ng img ksi hindi ko po alam kung paano sila ilagay hahaha. -->
             <div class="vectors">
@@ -17,47 +51,12 @@
                 <img src="img/vectors/vector-1.png" alt="" id="vec1">
                 <img src="img/vectors/vector-2.png" alt="" id="vec2">
             </div>
-
-            <nav>
-                <div class="wrapper">
-                    <div class="logo">
-                        <a href="home.html"><img src="#" alt="logo" id="logo"></a>
-                    </div>
-                    <div class="menu">
-                        <ul class="navMenu">
-                            <li class="navList">
-                                <a href="#" class="navLink">Home</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">My Course</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">Contact</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">Blog</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">About Us</a>
-                            </li>
-                            <li class="navList">
-                                <a href="#" class="navLink">Account</a>
-                            </li>
-                        </ul>
-                        <div class="hamburger">
-                            <span class="bar"></span>
-                            <span class="bar"></span>
-                            <span class="bar"></span>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-
             <div class="wrapper">
                 <div class="landingPage">
                     <div class="bannerText">
                         <h1><span id="text">Education</span> is the key to all the locked doors of the unknown.</h1>
-                        <p>Learn essential tech skills with KodeGo’s online bootcamps and land your dream career in as fast as 12 weeks.</p>
+                        <p>Learn essential tech skills with KodeGo’s online bootcamps and land your dream career in as
+                            fast as 12 weeks.</p>
                         <button class="btnSeeCourses">See Courses</button>
                     </div>
 
@@ -71,68 +70,28 @@
         <section class="info_offers">
             <div class="info">
                 <div class="wrapper">
-                    <div class="students">
-                        <h1>2,500+</h1>
+                    <div class="students info-card">
+                        <label>2,500+</label>
                         <p>Students Enrolled</p>
                     </div>
-                    <div class="graduates">
-                        <h1>351</h1>
+                    <div class="graduates info-card">
+                        <label>351</label>
                         <p>Successful Kids</p>
                     </div>
-                    <div class="approval">
-                        <h1>564</h1>
+                    <div class="approval info-card">
+                        <label>564</label>
                         <p>Happy Parents</p>
                     </div>
-                    <div class="awards">
-                        <h1>300</h1>
+                    <div class="awards info-card">
+                        <label>300</label>
                         <p>Awards Won</p>
                     </div>
                 </div>
             </div>
 
-            <div class="wrapper">
-                <div class="courses">
-                    <p>COURSE</p>
-                    <h2>What We Offer</h2>
-
-                    <div class="offers">
-                        <div class="card">
-                            <img src="img/course/english.png" alt="">
-                            <h3>English</h3>
-                            <h5>12 Lessons</h5>
-                            <h6>3 Projects</h6>
-                            <button><p>Free</p></button>
-                        </div>
-                        <div class="card">
-                            <img src="img/course/math.png" alt="">
-                            <h3>Math</h3>
-                            <h5>12 Lessons</h5>
-                            <h6>3 Projects</h6>
-                            <button><p>Free</p></button>
-                        </div>
-                        <div class="card">
-                            <img src="img/course/science.png" alt="">
-                            <h3>Science</h3>
-                            <h5>12 Lessons</h5>
-                            <h6>3 Projects</h6>
-                            <button><p>Free</p></button>
-                        </div>
-                        <div class="card">
-                            <img src="img/course/geography.png" alt="">
-                            <h3>Geography</h3>
-                            <h5>12 Lessons</h5>
-                            <h6>3 Projects</h6>
-                            <button><p>$20.00</p></button>
-                        </div>
-                    </div>
-
-                    <a href="#" class="see_more">
-                        <button>See More</button>
-                    </a>
-                </div>
-            </div>
         </section>
-    </div>
+    </section>
+
 
     <script src="js/XITO.js"></script>
 </body>
