--- a/index.html
+++ b/index.html
@@ -65,56 +65,57 @@
                 <img src="img/vectors/vector-1.png" alt="" id="vec1">
                 <img src="img/vectors/vector-2.png" alt="" id="vec2">
             </div>
-            <div class="wrapper">
+            <div class="wrapper" data-aos="fade-down"
+            data-aos-easing="linear"
+            data-aos-duration="1500">
                 <div class="landingPage">
-                    <div class="bannerText">
+                    <div class="bannerText" >
                         <h1><span id="text">Education</span> is the key to all the locked doors of the unknown.</h1>
                         <p>Learn essential tech skills with KodeGo’s online bootcamps and land your dream career in as
                             fast as 12 weeks.</p>
-                        <button class="btnSeeCourses">See Courses</button>
+                        <button class="btnSeeCourses" data-aos="flip-left">See Courses</button>
                     </div>
 
-                    <div class="heroBanner">
-                        <img src="img/banner/heroBanner.png" alt="heroBanner">
+                    <div class="heroBanner" >
+                        <img src="img/banner/heroBanner.png" alt="heroBanner" >
                     </div>
                 </div>
             </div>
         </header>
-
-        <section class="info_offers">
-            <div class="info">
-                <div class="wrapper">
-                    <div class="students info-card">
-                        <label>2,500+</label>
-                        <p>Students Enrolled</p>
-                    </div>
-                    <div class="graduates info-card">
-                        <label>351</label>
-                        <p>Successful Kids</p>
-                    </div>
-                    <div class="approval info-card">
-                        <label>564</label>
-                        <p>Happy Parents</p>
-                    </div>
-                    <div class="awards info-card">
-                        <label>300</label>
-                        <p>Awards Won</p>
-                    </div>
-                </div>
-            </div>
-
-        </section>
     </section>
 
+    <section class="info_offers">
+        <div class="info">
+            <div class="wrapper">
+                <div class="students info-card"  data-aos="flip-left">
+                    <label>2,500+</label>
+                    <p>Students Enrolled</p>
+                </div>
+                <div class="graduates info-card"  data-aos="flip-left">
+                    <label>351</label>
+                    <p>Successful Kids</p>
+                </div>
+                <div class="approval info-card"  data-aos="flip-left">
+                    <label>564</label>
+                    <p>Happy Parents</p>
+                </div>
+                <div class="awards info-card"  data-aos="flip-left">
+                    <label>300</label>
+                    <p>Awards Won</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <section class="course-section">
         <div class="course">
-            <div class="headtop">
+            <div class="headtop" data-aos="fade-down">
                 <label>COURSE</label>
                 <h2>What We Offers </h2>
             </div>
             <div class="course-main">
-                <div class="box">
-                    <div class="imge-box">
+                <div class="box" data-aos="fade-down-left">
+                    <div class="imge-box" >
                         <img src="/assets/English-language.jpg" alt="">
                     </div>
                     <div class="description">
@@ -124,7 +125,7 @@
                         <div class="btn-course"><button>Free</button></div>
                     </div>
                 </div>
-                <div class="box padding">
+                <div class="box padding" data-aos="fade-down-left">
                     <div class="imge-box ">
                         <img src="/assets/Maths_1.jpg" alt="">
                     </div>
@@ -135,7 +136,7 @@
                         <div class="btn-course"><button>Free</button></div>
                     </div>
                 </div>
-                <div class="box">
+                <div class="box" data-aos="fade-down-left">
                     <div class="imge-box">
                         <img src="/assets/myhc_78987.jpg" alt="">
                     </div>
@@ -146,7 +147,7 @@
                         <div class="btn-course"><button>Free</button></div>
                     </div>
                 </div>
-                <div class="box order  padding">
+                <div class="box order  padding" data-aos="fade-down-left">
                     <div class="imge-box">
                         <img src="/assets/T-AD-008-Art-Title-Display-Lettering.jpg" alt="">
                     </div>
@@ -159,7 +160,7 @@
                 </div>
             </div>
 
-            <div class="btn-course buttom"> <button>See More</button></div>
+            <div class="btn-course buttom"  data-aos="flip-left"> <button>See More</button></div>
         </div>
     </section>
 
@@ -169,9 +170,11 @@
                 <img src="/img/learnAnything.png" alt="A boy carrying 5 books">
             </div>
             <article id="learnAnythingText">
+                <div data-aos="fade-down">
                 <span>Learn anything</span>
                 <h2>Benefits About Online Learning Expertise</h2>
-                <div class="learnAnythingFeatures one">
+                </div>
+                <div class="learnAnythingFeatures one" data-aos="flip-left">
                     <div class="learnAnythingSVG">
                         <svg width="67" height="67" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -185,7 +188,7 @@
                             there live the blind texts.</p>
                     </div>
                 </div>
-                <div class="learnAnythingFeatures two">
+                <div class="learnAnythingFeatures two" data-aos="flip-left">
                     <div class="learnAnythingSVG">
                         <svg width="73" height="73" viewBox="0 0 73 73" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -199,7 +202,7 @@
                             there live the blind texts.</p>
                     </div>
                 </div>
-                <div class="learnAnythingFeatures three">
+                <div class="learnAnythingFeatures three" data-aos="flip-left">
                     <div class="learnAnythingSVG">
                         <svg width="66" height="66" viewBox="0 0 66 66" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_220_54)">
@@ -302,11 +305,11 @@
     </section>
 
     <section id="testim" class="testim">
-        <div class="testim-head">
+        <div class="testim-head"data-aos="fade-down" >
             <label>BLOG POST & EVENTS</label>
             <h2>DISCOVER NEWS AND ACTIVITIES IN OURSCHOOL</h2>
         </div>
-        <div class="wrap">
+        <div class="wrap"  data-aos="fade-up">
             <span id="right-arrow" class="arrow right fa fa-chevron-right"></span>
             <span id="left-arrow" class="arrow left fa fa-chevron-left "></span>
             <ul id="testim-dots" class="dots">
@@ -425,7 +428,6 @@
             </div>
         </div>
     </section>
-
 
 
     <footer>
